# LinkedinAutoBot

./: README.md
LinkedInAutoBot/: README.md  main.py  pyproject.toml
LinkedInAutoBot/src/: back.py  main.py  requirements.txt
LinkedInAutoBot/src/modules/: GUI_elements.py  image_search.py
LinkedInAutoBot/src/pages/: home.py  setup.py
bot/: pyvenv.cfg
bot/Scripts/: activate  activate.bat  prichunkpng  pricolpng  priditherpng  priforgepng  prigreypng  pripalpng  pripamtopng  priplan9topng  pripnglsch  pripngtopam  prirowpng  priweavepng
