[project]
name = "LinkedIn AutoBot"
version = "0.1.2"
description = "Automation for LinkedIn"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "flet==0.25.2",
  "pyautogui==0.9.54",
  "pyscreeze==1.0.1",
  "opencv-python==4.10.0.84",
  "pillow==11.1.0"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "LinkedIn AutoBot"

# company name to display in about app dialogs
company = "Sidney T. A. Junior"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Sidney T. A. Junior"

[tool.flet.app]
path = "src"